# stylua_serve

./: .gitignore  Cargo.toml  LICENCE.txt  build.rs
plugin/: default.project.json  watch.bat
plugin/src/: Logger.luau  defaultSettings.luau  init.server.luau
src/: main.rs
